[package]
name = "solr_post"
version = "0.1.2"
edition = "2021"
description = "A simple command line tool and library to post files in a directory to a Solr server"
license = "MIT"
repository = "https://github.com/Jared-Sprague/solr_post"
authors = ["Jared Sprague <jared@caramelcode.com>"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
name = "solr_post"
path = "src/lib.rs"

[[bin]]
name = "solr-post"
path = "src/cli.rs"

[dependencies]
wax = "0.6.0"
urlencoding = "2.1.2"
futures = "0.3.21"
bytes = "1.4.0"
regex = "1.10.3"
rayon = "1.9.0"
log = "0.4.21"
env_logger = "0.11.3"
reqwest = "0.12.1"
tokio = { version = "1.36.0", features = ["full"] }
argh = "0.1.12"
mime_guess = "2.0.4"
